--- a/static/admin.html
+++ b/static/admin.html
@@ -494,8 +494,8 @@
             <h2>Second Chair Login</h2>
             <form id="loginForm">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
@@ -1158,7 +1158,7 @@
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded',
                     },
-                    body: `username=${encodeURIComponent(formData.get('username'))}&password=${encodeURIComponent(formData.get('password'))}`
+                    body: `email=${encodeURIComponent(formData.get('email'))}&password=${encodeURIComponent(formData.get('password'))}`
                 });
 
                 if (response.ok) {
@@ -1168,7 +1168,7 @@
                     await loadUser();
                     showMainInterface();
                 } else {
-                    showError('loginError', 'Invalid username or password');
+                    showError('loginError', 'Invalid email or password');
                 }
             } catch (error) {
                 showError('loginError', 'Login failed. Please try again.');
