Show section headings in citation tooltips

--- a/static/chat.html
+++ b/static/chat.html
@@ -47,6 +47,7 @@
         .cite-num{margin-left:4px;font-size:12px;text-decoration:none;}
         .cite-window{margin-top:4px;font-size:12px;display:flex;align-items:center;gap:6px;}
         .cite-window span{cursor:pointer;user-select:none;}
+        .cite-heading{font-style:italic;margin-left:4px;}
         form{display:flex;border-top:1px solid var(--gray-200);align-items:center;}
         #chatInput{flex:1;padding:32px 16px;border:none;font-size:16px;}
         #chatInput:focus{outline:none;}
@@ -242,7 +243,8 @@ function addMessage(text,cls,sources=[]){
     if(cls==='bot' && sources && sources.length){
         sources.slice(0,6).forEach((s,i)=>{
             const link=formatSourceLink(s.source);
-            html+=` <a href="${link}" target="_blank" class="cite-num" title="${s.source}">${circledNums[i]}</a>`;
+            const tip=[s.heading||'',s.page?`p.${s.page}`:'',s.line?`l.${s.line}`:'',s.source].filter(Boolean).join(' - ');
+            html+=` <a href="${link}" target="_blank" class="cite-num" title="${tip}">${circledNums[i]}</a>`;
         });
     }
     div.innerHTML=html;
@@ -250,11 +252,12 @@ function addMessage(text,cls,sources=[]){
         const cite=document.createElement('div');
         cite.className='cite-window';
         let idx=0;
-        cite.innerHTML=`Where did this answer come from? ${sources.length>1?'<span class="cite-prev">&#8592;</span>':''}<a class="cite-link" href="${formatSourceLink(sources[0].source)}" target="_blank">${sources[0].source}</a>${sources.length>1?'<span class="cite-next">&#8594;</span>':''}`;
+        cite.innerHTML=`Where did this answer come from? ${sources.length>1?'<span class="cite-prev">&#8592;</span>':''}<a class="cite-link" href="${formatSourceLink(sources[0].source)}" target="_blank">${sources[0].source}</a><span class="cite-heading">${sources[0].heading||''}</span>${sources.length>1?'<span class="cite-next">&#8594;</span>':''}`;
         const update=()=>{
             const src=sources[idx];
             cite.querySelector('.cite-link').href=formatSourceLink(src.source);
             cite.querySelector('.cite-link').textContent=src.source;
+            cite.querySelector('.cite-heading').textContent=src.heading||'';
         };
         if(sources.length>1){
             cite.querySelector('.cite-prev').addEventListener('click',()=>{idx=(idx-1+sources.length)%sources.length;update();});
